--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-Hello World
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>my website</title>
+    <style>
+        body {
+            background-color: pink;
+            color: black;
+            text-align: center;
+            font-family: Arial, sans-serif;
+        }
+        img {
+            width: 300px;
+            border: 5px solid black;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Thank you Mrs. Chen!</h1>
+    <p>yay!</p>
+
+    <!-- Image -->
+    <img src="cute_minion3_machine_embroidery_design.jpg" alt="Cute Image">
+
+    <!-- Background Music -->
+    <audio autoplay loop>
+        <source src="music.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+</body>
+</html>
