--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </style>
 </head>
 <body>
-    <h1>Thank you Mrs. Chen!</h1>
-    <p>yay!</p>
+    <h1>THANK YOU MRS. CHEN!!</h1>
+    <p>I appreciate the time and effort that you put in to help us improve this year! Thank you for being such an inspiring and patient teacher! :D</p>
 
     <!-- Image -->
     <img src="cute_minion3_machine_embroidery_design.jpg" alt="Cute Image">
